--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             data-animation-delay="0.1s">
             <div class="tk_counter_inner">
               <div class="tk_countdown_time" data-time="2020/05/08 00:00:00"></div>
-              <a href="#" class="btn btn-default">Buy Token Now <i class="ion-ios-arrow-thin-right"></i></a>
+              <a href="#" class="btn btn-default">Registration <i class="ion-ios-arrow-thin-right"></i></a>
             </div>
           </div>
         </div>
